# yttria

./: :W  :w  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt
.cache/clangd/index/: MainApp.cpp.670E4500065EC679.idx  MainApp.hpp.BD8B74263F14E431.idx  Printer.cpp.F6B5F0DF6A558BDF.idx  Printer.hpp.47CEC3CF4FBE13E2.idx  VulkanBuffer.cpp.E169624ECF48F3FF.idx  VulkanBuffer.hpp.78F3A31101C55C9F.idx  VulkanCamera.cpp.7C1820BC137C221D.idx  VulkanCamera.hpp.48E26A8ABF5FC7F9.idx  VulkanDescriptors.cpp.132D519348BB7176.idx  VulkanDescriptors.hpp.6F9D2ED7758D15D4.idx  VulkanDevice.cpp.CA655B7E53307503.idx  (+75 more)
examples/dev_app/: CMakeLists.txt  MainApp.cpp  MainApp.hpp  main.cpp
scripts/: build_debug.sh
src/: main.cpp
src/backend/: VulkanBuffer.cpp  VulkanCamera.cpp  VulkanDescriptors.cpp  VulkanDevice.cpp  VulkanModel.cpp  VulkanMovementController.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanSceneObject.cpp  VulkanSwapChain.cpp  Window.cpp  buffer.cpp  camera.cpp  command_pool.cpp  compute_pipeline.cpp  descriptors.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  instance.cpp  linear_clamp_sampler.cpp  logical_device.cpp  model.cpp  movement_controller.cpp  physical_device.cpp  pipeline.cpp  renderer.cpp  scene_object.cpp  surface.cpp  swap_chain.cpp  window.cpp
src/frontend/: renderer.cpp
src/shaders/: compile.sh  fluid_sim.comp.glsl  fluid_sim.comp.spv  frag.spv  fragment.glsl  ink_sim.comp.glsl  ink_sim.comp.spv  point_light.frag.glsl  point_light.frag.spv  point_light.vert.glsl  point_light.vert.spv  vert.spv  vertex.glsl
(+49 files in other folders)
